--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "next": "^14.2.0"
+    "next": "^14.2.0",
+    "next-sitemap": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
