--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.23.25",
-    "next": "^14.2.0",
+    "next": "14.2.33",
     "next-sitemap": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
